# coretaskoptimizer

./: CMakeLists.txt  README.md  build.sh  module.prop
src/: main.cpp
